промежуточное по для авторизации, считывает куки хэдр из запроса, если валидный токен, то пропускает в контроллер, а в контроллере уже запрос в бд за списком юзера
